Resolves Bug 1364290: High Contrast down arrow in combo box not visible in high contrast themes
The change applies a css selector to specify which dropdown image we use depending on white and dark contrast themes.

The patch also improves contrast in tabbedPaned headers in Devtools settings, and in activity bar when HC themes are toggled on from a Dark Devtools theme.
improved contrast in tabbed pane header in High Contrast Desert theme

Before
https://i.imgur.com/4wPkika.gif

After
https://i.imgur.com/DnNwWYc.gif

Bug: 1364290


css rules to toggle background image in high contrast themes

Bug: 1364290: High contrast down arrow in combo box not visible in high contrast themes

--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -375,14 +375,23 @@
     background-color: ButtonFace;
   }
 
-  .tabbed-pane-header-tab,
-  .tabbed-pane-header-tab.selected {
+  .tabbed-pane-header-contents .tabbed-pane-header-tabs .tabbed-pane-header-tab {
     background: ButtonFace;
     color: ButtonText;
   }
 
-  .tabbed-pane-header-tab:hover,
-  .tabbed-pane-shadow .tabbed-pane-header-tab:focus-visible {
+  .tabbed-pane-header-tab .tabbed-pane-header-tab-title {
+    color: inherit;
+  }
+
+  .tabbed-pane-header-contents .tabbed-pane-header-tabs .tabbed-pane-header-tab.selected,
+  .tabbed-pane-header-contents .tabbed-pane-header-tabs .tabbed-pane-header-tab.selected:focus-visible {
+    background-color: Highlight;
+    color: HighlightText;
+  }
+
+  .tabbed-pane-header-tabs .tabbed-pane-header-tab:hover,
+  .tabbed-pane-header-tabs .tabbed-pane-shadow .tabbed-pane-header-tab:focus-visible {
     background-color: Highlight;
     color: HighlightText;
   }
